<resources>
    <string name="app_name">Status Saver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="tired_of_watching_ads">Tired of watching Ads</string>
    <string name="remove_ads_with_our_premium_version">Remove Ads with our\npremium Version</string>
    <string name="get_premium_pro">Get Premium Pro</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="save_status">Save Status</string>
    <string name="easily_save_your_favorite_whatsapp_statuses">Easily save your favorite WhatsApp statuses.</string>
    <string name="save_now">Save Now</string>
    <string name="status">Status</string>
    <string name="qr_code">QR Code</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="caption">Caption</string>
    <string name="reply_message">Reply Message</string>
    <string name="whatsapp_web">Whatsapp Web</string>
    <string name="chatting_title">Direct Chat for What’s App provides\nalternative to send a What’s App Message\nwithout saving contact number. First select\nthe country code and enter What’s App\nnumber to send What’s App Message</string>
    <string name="your_message">Your Message</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="what_s_app">What’s App</string>
    <string name="business_wa">Business WA</string>
    <string name="your_caption">Your Caption</string>
    <string name="add_your_caption_here">Add your caption here...</string>
    <string name="copy">Copy</string>
    <string name="chatting">Chatting</string>
    <string name="no_files_found">No Files Found</string>
    <string name="cant_find_whatsapp_dir">Cant find WhatsApp Dir</string>
    <string name="save">Save</string>
    <string name="scan_what_s_app_web">Scan What’s App Web</string>
    <string name="ok">OK</string>
    <string name="generate">Generate</string>
    <string name="_25">25</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="view_finder">View Finder</string>
    <string name="scanning_with">Scanning with</string>
    <string name="scanner_library">Scanner Library</string>
    <string name="result">Result</string>
    <string name="scan_with_ml_kit">Scan with ML Kit</string>
    <string name="scan_with_zxing">Scan with ZXing</string>
    <string name="developed_by_maulik_hirani">Developed by Maulik Hirani</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="qr_code_detail">Qr Code Detail</string>
    <string name="search">Search</string>
    <string name="type_your_number_here">Type your number here!</string>
    <string name="dummy">
        "You know you’re in love when you can’t fall asleep because reality is finally better than your dreams."</string>
    <string name="more_apps">More Apps</string>
    <string name="banner_ads1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ads1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="small_medium_native_ads">ca-app-pub-3940256099942544/2247696110</string>
    <string name="recycler_view_native_ads">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rewarded_ads1">ca-app-pub-3940256099942544/5224354917</string>
    <string name="appOpenAds">ca-app-pub-3940256099942544/3419835294</string>
    <string name="rewardInterstitialAds">ca-app-pub-3940256099942544/5354046379</string>
    <string name="default_notification_channel_id">101</string>
    <string name="user_image">User image</string>
    <string name="your_messages_will_appear_here">Your Messages will appear here</string>
    <string name="deleted_message">This message was deleted</string>
    <string name="signal_deleted_message">This message was deleted.</string>
    <string name="welcome">Welcome</string>
    <string name="intro_text_one">WhatsDeleted will allow you to recover deleted WhatsApp messages by reading your notifications</string>
    <string name="notice">Notice</string>
    <string name="intro_text_two">If you have silenced a chat or watching it when the message gets deleted, you will not receive a notification so WhatsDeleted can\'t help in this case. \n \n WhatsDeleted can\'t recover messages that have been deleted before you installed this app.</string>
    <string name="setup">Setup</string>
    <string name="notification_notice">This allow the app to backup your notifications and messages in case they are deleted</string>
    <string name="notification_reader">Notification reader</string>
    <string name="enable">Enable</string>
    <string name="deleted_messages">Deleted Messages</string>
    <string name="recent_deleted">Recent Deleted</string>
    <string name="select_status">Select Status</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="edit_status">Edit Status</string>
    <string name="status_txt">First you have to see the status\nfrom whatsapp you want to download</string>
    <string name="next">Next</string>
    <string name="permission_required">Permission Required</string>
    <string name="status_sub">Please Read This Prompt carefully</string>
    <string name="status_des">Tap <b>‘Next’</b> and click <b>‘Use this\nFolder’</b> on next screen to access\nall statuses.</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="allow_access">Allow Access</string>
    <string name="notification_title">Allow us to read WhatsApp notifications so you can:</string>
    <string name="noti_feature_1">- View and manage messages without opening the app</string>
    <string name="noti_feature_2">- Stay updated with your chats instantly</string>
    <string name="noti_feature_3">We respect your privacy and do not store any personal data.</string>
    <string name="not_now">Not Now</string>
    <string name="warning">Warning!</string>
    <string name="warning_des">Make sure your image consist of text or\nsome kind of information.</string>
    <string name="cancel">Cancel</string>
</resources>