<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/enable_notification_access"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@id/sub_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/sub_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/message_bg"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="start"
                android:visibility="visible"
                android:text="@string/notification_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toTopOf="@id/ss"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_title" />

            <LinearLayout
                android:id="@+id/ss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/btnAllow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/noti_feature_1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/noti_feature_2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/noti_feature_3"/>
            </LinearLayout>


            <TextView
                android:id="@+id/btnAllow"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/allow_access"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@drawable/main_btn_bg"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintTop_toBottomOf="@id/ss"
                app:layout_constraintStart_toStartOf="@id/ss"/>

            <TextView
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_7sdp"
                android:background="@drawable/main_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/not_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/btnAllow"
                app:layout_constraintEnd_toEndOf="@id/ss"
                app:layout_constraintStart_toEndOf="@id/btnAllow"
                app:layout_constraintTop_toTopOf="@+id/btnAllow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
