<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/btn_bg"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClose">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/tired_of_watching_ads"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/remove_ads_with_our_premium_version"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toEndOf="@id/subTitle"
            android:src="@drawable/ic_premium" />

        <TextView
            android:id="@+id/btnPremium"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/subTitle"
            android:layout_alignStart="@id/subTitle"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/btn_premium"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_6sdp"
            android:text="@string/get_premium_pro"
            android:textColor="@color/btn_txt_clr"
            android:textSize="@dimen/_15ssp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_feedbacl" />

            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_more_app" />

            <TextView
                android:id="@+id/tvMoreapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/more_apps"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_share" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_rate_us"
                android:padding="@dimen/_5sdp"
                />

            <TextView
                android:id="@+id/tvRateUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_privacy_policy"
                android:padding="@dimen/_5sdp"
                />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>