<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnCopy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:gravity="start"
            android:padding="@dimen/_20sdp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnCopy"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@drawable/main_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/copy"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShare"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <TextView
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/main_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/btnCopy"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/btnCopy"
        app:layout_constraintTop_toTopOf="@id/btnCopy" />
    
</androidx.constraintlayout.widget.ConstraintLayout>